--- a/ExcelEngin/.classpath
+++ b/ExcelEngin/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="/home/easmalg/Desktop/poi-3.10.1/poi-3.10.1-20140818.jar"/>
 	<classpathentry kind="lib" path="C:/Users/rikro_000/workspace/ExcelEngin/resources/poi-3.10.1-20140818.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rikro_000/Desktop/poi-3.10.1/poi-3.10.1-20140818.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
