--- a/ExcelEngin/.classpath
+++ b/ExcelEngin/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry kind="lib" path="/home/easmalg/Desktop/poi-3.10.1/poi-3.10.1-20140818.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rikro_000/workspace/ExcelEngin/resources/poi-3.10.1-20140818.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rikro_000/Desktop/poi-3.10.1/poi-3.10.1-20140818.jar"/>
+	<classpathentry kind="src" path="resources"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/rikro_000/git/ExcelEngin/ExcelEngin/resources/poi-3.10.1-20140818.jar"/>
+	<classpathentry kind="lib" path="resources/config.properties"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.5.0_22"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
